--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.app {
+  min-height: 100%;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  padding: 0 15px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 50px;
+  background-color: rgba(17, 192, 236, 0.6);
 }
 
-.App-link {
-  color: #61dafb;
+.menu a {
+  margin-right: 15px;
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.main {
+  height: calc(100vh - 50px);
+}
+
+.main__wrap {
+  padding: 40px 15px 10px;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.text {
+  width: 100%;
+  height: 50px;
+  border: 2px solid rgba(179, 177, 177, 0.86);
+  padding: 0 10px;
+  font-size: 24px;
 }
