--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,10 +33,59 @@
   margin: 0 auto;
 }
 
+.word {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.field {
+  position: relative;
+  margin-bottom: 40px;
+}
+
 .text {
   width: 100%;
   height: 50px;
   border: 2px solid rgba(179, 177, 177, 0.86);
+  filter: drop-shadow(0 0 20px rgba(88, 87, 87, 0.8));
   padding: 0 10px;
   font-size: 24px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.text.success {
+  border-color: #05a005;
+}
+
+.error {
+  position: absolute;
+  color: red;
+  left: 5px;
+  top: calc(100% + 5px);
+  font-size: 14px;
+}
+
+.btn-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.word-btn {
+  width: 100%;
+  max-width: 150px;
+  height: 40px;
+  background-color: darkorange;
+  color: #fff;
+  border-radius: 6px;
+  margin-right: 30px;
+}
+
+.check-btn {
+  width: 100%;
+  max-width: 150px;
+  height: 40px;
+  background-color: rgba(32, 18, 123, 0.71);
+  border-radius: 6px;
+  color: #fff;
 }
